<resources>
    <string name="app_name">Library Catalog</string>
    <string name="wallpaper">wallpaper</string>
    <string name="online_library">ONLINE LIBRARY</string>
    <string name="search_library">Search Library</string>
    <string name="in_your_smartphone">In Your SmartPhone !</string>
    <string name="Description">Now You can study and read your favourite book from your phone ! reach out to a large Selection of Books</string>
    <string name="MainPage">MainPage</string>
    <string name="scientific_book">Scientific Book</string>
    <string name="Educational_book">Eductional Books</string>
    <string name="Poetry_book">Poetry Books</string>
    <string name="Children_book">Children Books</string>
    <string name="Novels_book">Novels Books</string>
    <string name="Audio_books">Audio Books</string>
    <string name="Comic_books">Comic Books</string>
    <string name="titlebook">TitleBook</string>
    <string name="MoreDetails">"More Details "</string>
    <string name="DescriptionBook">Description</string>
    <string name="titlebook1">titleBook1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TheVeryHungryCaterpillar">The Very Hungry Caterpillar</string>
    <string name="DescriptionBook1">A classic children\'s book about a caterpillar\'s journey of transformation.</string>
    <string name="tGoodnightMoon">Goodnight Moon</string>
    <string name="DescriptionBook2">A soothing bedtime story with beautiful illustrations.</string>
    <string name="WheretheWildThingsAre">Where the Wild Things Are</string>
    <string name="DescriptionBook3">A story about a young boy named Max who travels to a land of wild creatures.</string>
    <string name="TheGivingTree">The Giving Tree</string>
    <string name="DescriptionBook4">A heartwarming tale of a tree\'s selfless love for a boy.</string>
    <string name="McGrawHillEducation">McGraw-Hill Education</string>
    <string name="Description1">Calculus is a branch of mathematics that deals with the study of change and motion.</string>
</resources>